Fix label spacing and units.

--- a/app.css
+++ b/app.css
@@ -143,3 +143,8 @@ label {
 .finding p:last-child {
   margin-bottom: 0;
 }
+
+.labeled-audio .label {
+  margin-top: 0.5rem;
+  margin-bottom: 0;
+}
